# telegram-shibe-bot

./: Cargo.toml  Dockerfile  LICENSE.txt  flake.nix  telegram-shibe-bot.nix
.github/workflows/: ci.yml
src/: handlers.rs  main.rs  shibe_api.rs
