[package]
name = "telegram-shibe-bot"
version = "0.1.0"
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
dptree = "0.1.2"
reqwest = { version = "0.11.4", default-features = false, features = ["json", "rustls-tls"] }
teloxide = { version = "0.7.1", features = ["auto-send", "rustls", "ctrlc_handler", "dispatching2", "cache-me"], default-features = false }
tokio = { version = "1.11.0", default-features = false, features = ["rt-multi-thread"] }
tokio-stream = "0.1.7"
tracing = "0.1.28"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
